[package]
name = "cidar"
version = "0.1.2"
edition = "2021"
build = "build.rs"
authors = ["freehelpdesk <freehelpdesk@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
opt-level = "z"


[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "cargo", "git", "gitoxide", "rustc", "si"] }

[dependencies]
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["serde_json"] }
sentry = { version = "0.31.5", features = ["serde_json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
serenity = { version = "0.11.6", features = ["reqwest"] }
surrealdb = { version = "1.0.0-beta.9" }
thiserror = "1.0.43"
time-graph = { version = "0.3.0", features = ["table", "json"] }
tokio = { version = "1.29.1", features = ["full"] }
vergen = { version = "8.2.4", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
